initial commit...didn't even change anything

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -11,3 +11,6 @@ City: <%= @job.city %>
 <br>
 
 Company: <%= link_to @job.company.name, company_path(@job.company) %>
+<form method="get">
+  <a href="/companies/<%= @company.id %>/jobs/<%= @job.id %>/edit">Edit</a>
+</form>
