--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,7 @@
-All Jobs for <strong><%= @company.name %></strong>
+<h1>All Jobs for <strong><%= @company.name %></strong></h1>
 
-<% @jobs.each do |job| %>
-  <ul><%= job.title %> at <%= job.company.name %></ul>
+<% @company.jobs.each do |job| %>
+  <ul>
+    <li><a href="/companies/<%= @company.id %>/jobs/<%= job.id %>"><%= job.title %></a></li>
+  </ul>
 <% end %>
