--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,11 @@
 <h1>All Jobs for <strong><%= @company.name %></strong></h1>
 
-<% @company.jobs.each do |job| %>
-  <ul>
-    <li><a href="/companies/<%= @company.id %>/jobs/<%= job.id %>"><%= job.title %></a></li>
-  </ul>
-<% end %>
+<ul>
+  <% @company.jobs.each do |job| %>
+  <li class=job_<%= job.id %>>
+    <%= link_to job.title, company_job_path(@company, job) %>:
+    <%= link_to "Edit", edit_company_job_path(@company, job) %>
+    <%= link_to "Delete", company_job_path(@company, job), method: "delete" %>
+  </li>
+  <% end %>
+</ul>
