--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
 
   <%= link_to "Create New Category", new_category_path %>
 
-<ul>
+<ul class='category-class'>
   <% @categories.each do |category| %>
   <li class=company_<%= category.id %>>
     <%= link_to category.title, category_path(category) %>:
