--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -11,9 +11,9 @@
   <%= f.label :city %>
   <%= f.text_field :city %>
 
-  <%= f.label :category %>
+  <%= f.label :category_id %>
 
-  <%= f.select :category , @categories.collect {|category| [category.title, category.id]} %>
+  <%= f.select :category_id , @categories.collect {|category| [category.title, category.id]} %>
 
   <%= f.submit %>
 <% end %>
