--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,8 @@
 <h1>Category: <%= @category.title %></h1>
+
+<% @category.jobs.each do |job| %>
+<ul>
+  <li><%= link_to job.title, company_job_path(job.company, job)%></li>
+</ul>
+
+<% end %>
