creating job comment functionality

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
 
 <% @category.jobs.each do |job| %>
 <ul>
-  <li><%= link_to job.title, company_job_path(job.company, job)%></li>
+  <li><%= link_to job.title, job_path(job)%></li>
 </ul>
 
 <% end %>
