--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,11 +1,11 @@
-<h1>All Jobs for <strong><%= @company.name %></strong></h1>
+<h1>All Jobs</h1>
 
 <ul>
-  <% @company.jobs.each do |job| %>
+  <% @jobs.each do |job| %>
   <li class=job_<%= job.id %>>
-    <%= link_to job.title, company_job_path(@company, job) %>:
-    <%= link_to "Edit", edit_company_job_path(@company, job) %>
-    <%= link_to "Delete", company_job_path(@company, job), method: "delete" %>
+    <%= link_to job.title, job_path(job) %>:
+    <%= link_to "Edit", edit_job_path(job) %>
+    <%= link_to "Delete", job_path(job), method: "delete" %>
   </li>
   <% end %>
 </ul>
