--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -2,7 +2,19 @@
 
 <% @company.jobs.each do |job| %>
   <ul>
-    <li><a href="/companies/<%= @company.id %>/jobs/<%= job.id %>"><%= job.title %></a></li>
+    <li><%= link_to job.title, job_path(job) %></a></li>
+  </ul>
+<% end %>
+
+<% @company.contacts.each do |contact| %>
+  <ul>
+    <li><%= contact.name %></li>
+    <li><%= contact.position %></li>
+    <li><%= contact.email %></li>
+  </ul>
+  <ul>
+    <li><%= link_to "Edit Contact", edit_company_contact_path(@company, contact) %></li>
+    <li><%= link_to "Delete Contact", company_contact_path(@company, contact), method: 'delete' %></li>
   </ul>
 <% end %>
 
