--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,29 @@
   <title>JobTracker</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:600|VT323" rel="stylesheet">
   <%= csrf_meta_tags %>
 </head>
 <body>
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, class: name %>
   <% end %>
+<nav class="the-nav">
+  <div class="left-nav">
+    <ul class='left-list'>
+      <li><a href='<%= dashboard_path %>'>Dashboard</a></li>
+    </ul>
+  </div>
+  <div class="right-nav">
+    <ul class="right-list">
+      <li class='nav-list'><a href='<%= categories_path %>' >Categories</a></li>
+      <li class='nav-list'><a href='<%= companies_path %>'>Companies</a></li>
+      <li class='nav-list'><a href='<%= jobs_path %>'>Jobs</a></li>
+    </ul>
+  </div>
+</nav>
+<%= image_tag('fallout_terminal_effect.png') %>
+
 <%= yield %>
 
 </body>
