--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @jobs.each do |job| %>
-  <li class=job_<%= job.id %>>
+  <li class='job_<%= job.id %> list-style'>
     <%= link_to job.title, job_path(job) %>:
     <%= link_to "Edit", edit_job_path(job) %>
     <%= link_to "Delete", job_path(job), method: "delete" %>
