--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,6 +1,8 @@
+<div class='form-div'>
 <%= form_for @company do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
   <%= f.submit %>
 <% end %>
+</div>
