--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,24 +1,30 @@
+<div class='form-div'>
 <%= form_for [@job] do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-
+  <br>
+  <br>
   <%= f.label :description %>
   <%= f.text_field :description %>
-
+  <br>
+  <br>
   <%= f.label :level_of_interest %>
   <%= f.number_field :level_of_interest %>
-
+  <br>
+  <br>
   <%= f.label :city %>
   <%= f.text_field :city %>
-
+  <br>
+  <br>
   <%= f.label :category_id %>
-
-  <%= f.select :category_id , @categories.collect {|category| [category.title, category.id]} %>
-
+  <%= f.select :category_id , @categories.collect {|category| [category.title, category.id]} %> <%= link_to "Create New Category", new_category_path %>
+  <br>
+  <br>
   <%= f.label :company_id %>
-
   <%= f.select :company_id , @companies.collect {|company| [company.name, company.id]} %>
-
+  <br>
+  <br>
   <%= f.submit %>
 
 <% end %>
+</div>
