--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -9,15 +9,18 @@ Level of Interest: <%= @job.level_of_interest %>
 
 City: <%= @job.city %>
 <br>
-
-Company: <%= link_to @job.company.name, company_path(@job.company) %>
+<br>
 <form method="get">
-  <a href='<%= edit_job_path(@job) %>'>Edit</a>
+  <a href='<%= edit_job_path(@job) %>'>Edit Job</a>
 </form>
+<br>
+<br>
+Company: <%= link_to @job.company.name, company_path(@job.company) %>
+
 
 Category: <%= link_to @category.title, category_path(@category) %>
 <br>
-
+<br>
 
 Comments:
 <%= form_for @comment do |f| %>
@@ -30,8 +33,8 @@ Comments:
 
 
 <% @all_comments.each do |c| %>
-<ul>
+<ul class='category-class'>
   <li><%= c.text %></li>
-  <li><%= c.created_at %></li>
+  <li class='comment-time'><%= c.created_at %></li>
 </ul>
 <% end %>
